Fix mobile nav float causes content jump
In the mobile presentation, when the navigation toggle is floated, the
rest of the content jumps up to fill in the space abandoned by the nav.

--- a/wdn/templates_4.0/less/states/navigation.less
+++ b/wdn/templates_4.0/less/states/navigation.less
@@ -24,6 +24,10 @@
 }
 
 @media @bp-nav-hidden {
+    .nav-scrolling #header {
+       margin-bottom: 31px // maintain whitespace reserved by fixed trigger
+    }
+
     .nav-scrolling .wdn-menu-trigger {
         position: fixed;
         top: 0;
